--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
-
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -23,7 +22,9 @@
 	"homepage": "https://pannawat05.github.io/taskmanager/",
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
+		"@tailwindcss/vite": "^4.1.1",
 		"jquery": "^3.7.1",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"tailwindcss": "^4.1.1"
 	}
 }
